Put a z-index on the discount UI. Fixes issue #8

--- a/themes/MajorLabel/style.css
+++ b/themes/MajorLabel/style.css
@@ -2746,6 +2746,7 @@ textarea {
 	position:absolute;
 	background-color:#FFFFFF;
 	display:none;
+	z-index: 1;
 }
 
 .TaxShow{
